crates/snapshots/snapshots/cli_snapshots__styles__style_quoted_values.snap
---
source: crates/snapshots/tests/cli_snapshots/styles.rs
expression: document
---
case: style_quoted_values

--- step: migrate ---
status: 0
stdout: "--- a/Button.module.css\n+++ b/Button.module.css\n@@ -1,1 +0,0 @@\n-.button { background-image: url(\"a_b.png\"); font-family: \"My Font\", sans-serif; content: \"a_b\"; width: calc(min(100%, 50vw)); }\n--- a/Button.tsx\n+++ b/Button.tsx\n@@ -1,2 +1,1 @@\n-import styles from './Button.module.css';\n-export const Button = () => <button className={styles.button}>Save</button>;\n+export const Button = () => <button className='[background-image:url(\"a_b.png\")] [content:\"a\\_b\"] font-my-font w-[calc(min(100%,_50vw))]'>Save</button>;\n--- a/globals.css\n+++ b/globals.css\n@@ -1,1 +1,5 @@\n @import \"tailwindcss\";\n+\n+@theme {\n+  --font-my-font: \"My Font\", sans-serif;\n+}\nApplied 3 file(s); 1 rule(s) converted, 0 retained.\n"
stderr: ""
workspace delta:
  deleted Button.module.css
    before: ".button { background-image: url(\"a_b.png\"); font-family: \"My Font\", sans-serif; content: \"a_b\"; width: calc(min(100%, 50vw)); }\n"
  modified Button.tsx
    before: "import styles from './Button.module.css';\nexport const Button = () => <button className={styles.button}>Save</button>;\n"
    after: "export const Button = () => <button className='[background-image:url(\"a_b.png\")] [content:\"a\\_b\"] font-my-font w-[calc(min(100%,_50vw))]'>Save</button>;\n"
  modified globals.css
    before: "@import \"tailwindcss\";\n"
    after: "@import \"tailwindcss\";\n\n@theme {\n  --font-my-font: \"My Font\", sans-serif;\n}\n"
