crates/snapshots/snapshots/cli_snapshots__styles__style_revert_layer.snap
---
source: crates/snapshots/tests/cli_snapshots/styles.rs
assertion_line: 3
expression: document
---
case: style_revert_layer

--- step: preview ---
status: 0
stdout: "Previewed 0 file(s); 0 rule(s) converted, 3 retained.\n"
stderr: "warning[unsupported-value] Button.module.css:1:1-1:35 The rule is outside the supported declaration or selector subset.\nwarning[unsupported-value] Button.module.css:2:1-2:36 The rule is outside the supported declaration or selector subset.\nwarning[unsupported-value] Button.module.css:3:1-3:38 The rule is outside the supported declaration or selector subset.\n"
workspace delta:
  unchanged

--- step: write ---
status: 0
stdout: "Applied 0 file(s); 0 rule(s) converted, 3 retained.\n"
stderr: "warning[unsupported-value] Button.module.css:1:1-1:35 The rule is outside the supported declaration or selector subset.\nwarning[unsupported-value] Button.module.css:2:1-2:36 The rule is outside the supported declaration or selector subset.\nwarning[unsupported-value] Button.module.css:3:1-3:38 The rule is outside the supported declaration or selector subset.\n"
workspace delta:
  unchanged
