crates/snapshots/snapshots/cli_snapshots__styles__style_sass_global_values.snap
---
source: crates/snapshots/tests/cli_snapshots/styles.rs
expression: document
---
case: style_sass_global_values

--- step: migrate ---
status: 0
stdout: "--- a/Card.tsx\n+++ b/Card.tsx\n@@ -1,1 +1,1 @@\n-export const Card = () => <div className=\"card\" />;\n+export const Card = () => <div className=\"card p-[13px]\" />;\nApplied 1 file(s); 0 rule(s) converted, 1 retained.\n"
stderr: "warning[retained-global-rule] legacy.scss:2:1-2:27 Global CSS is never deleted automatically.\n"
workspace delta:
  modified Card.tsx
    before: "export const Card = () => <div className=\"card\" />;\n"
    after: "export const Card = () => <div className=\"card p-[13px]\" />;\n"
