crates/snapshots/snapshots/cli_snapshots__styles__style_sass_indented_variable.snap
---
source: crates/snapshots/tests/cli_snapshots/styles.rs
expression: document
---
case: style_sass_indented_variable

--- step: migrate ---
status: 0
stdout: "--- a/Button.module.sass\n+++ b/Button.module.sass\n@@ -1,3 +1,2 @@\n $space: 13px\n-.button\n-  padding: $space\n+\n--- a/Button.tsx\n+++ b/Button.tsx\n@@ -1,2 +1,1 @@\n-import styles from './Button.module.sass';\n-export const Button = () => <button className={styles.button}>Save</button>;\n+export const Button = () => <button className=\"p-[13px]\">Save</button>;\nPreviewed 2 file(s); 1 rule(s) converted, 0 retained.\n"
stderr: "warning[rebuild-required] Button.module.sass Rebuild this preprocessor entry to refresh its generated CSS.\n"
workspace delta:
  unchanged
