crates/snapshots/snapshots/cli_snapshots__styles__style_sass_mixin_retained.snap
---
source: crates/snapshots/tests/cli_snapshots/styles.rs
expression: document
---
case: style_sass_mixin_retained

--- step: migrate ---
status: 0
stdout: "Applied 0 file(s); 0 rule(s) converted, 1 retained.\n"
stderr: "warning[unproven-source-map] Button.module.scss The generated rule does not map uniquely to one authored source rule, so it is retained.\n"
workspace delta:
  unchanged
