crates/snapshots/snapshots/cli_snapshots__styles__style_scss_candidate_offsets.snap
---
source: crates/snapshots/tests/cli_snapshots/styles.rs
expression: document
---
case: style_scss_candidate_offsets

--- step: migrate ---
status: 0
stdout: "--- a/Button.module.scss\n+++ b/Button.module.scss\n@@ -1,3 +1,3 @@\n $space: 13px;\n-.pad { padding: $space; }\n+\n .button { COLOR: red; }\n--- a/Button.tsx\n+++ b/Button.tsx\n@@ -1,2 +1,2 @@\n import styles from './Button.module.scss';\n-export const Button = () => <button className={styles.button}><i className={styles.pad} /></button>;\n+export const Button = () => <button className={styles.button}><i className=\"p-[13px]\" /></button>;\nPreviewed 2 file(s); 1 rule(s) converted, 1 retained.\n"
stderr: "warning[rebuild-required] Button.module.scss Rebuild this preprocessor entry to refresh its generated CSS.\nwarning[candidate-compilation-failure] Button.module.scss:3:1-3:24 Tailwind did not generate CSS for `[COLOR:red]`, so the rule is retained.\n"
workspace delta:
  unchanged
